[package]
name = "encryptable-tokio-fs"
version = "0.1.1"
edition = "2021"
description = "A drop-in, API-identical replacement for `tokio::fs` with transparent opt-in, non-framing stream cipher encryption"
keywords      = ["encryption", "security", "filesystem", "ChaCha20", "stream"]
categories    = ["api-bindings", "asynchronous", "cryptography"]
readme        = "README.md"
authors       = ["Luiz Silveira <zertyz@gmail.com>"]
homepage      = "https://github.com/zertyz/encryptable-tokio-fs"
repository    = "https://github.com/zertyz/encryptable-tokio-fs"
documentation = "https://docs.rs/encryptable-tokio-fs/"
license       = "Unlicense"
[workspace]

[dependencies]
tokio = { version = "1", default-features = false, features = ["fs", "io-util"] }
chacha20 = { version = "0.9", default-features = false, features = ["std", "zeroize"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }

[dev-dependencies]

# for the examples
tokio = { version = "1", features = ["full"] }